--- a/colorized_urls.html
+++ b/colorized_urls.html
@@ -1,492 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>URL Editor with Matching Wrap</title>
+  <head>
+    <title>URL Editor with Matching Wrap</title>
+    <!-- CodeMirror CSS from CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.min.css"
+    />
+    <!-- Diff Match Patch Library from CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"
+    ></script>
+    <!-- Our custom CSS -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>URL Editor</h1>
+    <div class="column">
+      <h2 id="sectionTitle">Clicks</h2>
 
-  <!-- CodeMirror CSS from CDN -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.min.css"
-/>
-  <!-- Diff Match Patch Library from CDN -->
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"
-  ></script>
+      <!-- Original Input -->
+      <label for="clicksInput">Input</label>
+      <textarea
+        id="clicksInput"
+        spellcheck="false"
+        placeholder="Paste URL here..."
+      ></textarea>
 
-  <style>
-    /* Universal settings: Montserrat (or fallback to arial/sans-serif) and line-height: 1.5 */
-    body {
-      font-family: Montserrat, arial, sans-serif;
-      font-size: 14px;
-      line-height: 1.5;
-      padding: 20px;
-      background-color: #f0f0f0;
-      max-width: 1280px;
-      margin: 0 auto;
-    }
+      <!-- Output always shows the original with color + any deletions in red -->
+      <label for="clicksOutput">Output</label>
+      <div id="clicksOutput" class="output"></div>
+      <div id="clicksMessage" class="matchMessage"></div>
+    </div>
 
-    /* Fixed-width container in ch units to align line wrapping */
-    .column {
-      background-color: white;
-      padding: 15px;
-      border-radius: 5px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
-      width: 80ch; /* Adjust if needed */
-      box-sizing: border-box;
-    }
+    <div class="column">
+      <!-- Editable Text Area using CodeMirror -->
+      <label for="clicksEditor">Edit URL</label>
+      <textarea
+        id="clicksEditor"
+        spellcheck="false"
+        placeholder="Adjust the URL here..."
+      ></textarea>
+    </div>
 
-    h2 {
-      margin-top: 0;
-      color: #333;
-    }
-
-    label {
-      font-size: 0.9em;
-      margin-bottom: 6px;
-      display: inline-block;
-    }
-
-    /* Input textarea styles */
-    textarea {
-      display: block;
-      width: 100%;
-      height: 240px;
-      margin-bottom: 20px;
-      box-sizing: border-box;
-
-      /* Ensure identical wrapping */
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-      overflow-x: hidden;
-      overflow-y: auto;
-
-      /* Use universal font styles */
-      font-family: inherit;
-      font-size: inherit;
-      line-height: inherit;
-
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      resize: vertical;
-    }
-
-    /* Output div styles */
-    .output {
-      width: 100%;
-      height: 240px;
-      overflow-y: auto;
-
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-      word-break: break-word;
-      box-sizing: border-box;
-
-      font-family: inherit;
-      font-size: inherit;
-      line-height: inherit;
-
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      margin-bottom: 10px;
-      padding: 8px;
-    }
-
-    .matchMessage {
-      font-size: 0.9em;
-      font-weight: bold;
-      margin-top: 5px;
-      line-height: 1.4;
-      min-height: 18px;
-    }
-
-    /* CodeMirror instance styling */
-    .CodeMirror {
-      box-sizing: border-box;
-      width: 100%;
-      height: 240px;
-      font-family: inherit;
-      font-size: inherit;
-      line-height: inherit;
-
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      padding: 4px;
-    }
-
-    .CodeMirror-scroll {
-      overflow-x: hidden;
-    }
-
-    /* Custom CodeMirror highlighting classes */
-    .cm-appsflyer-id {
-      color: #4caf50;
-    }
-    .cm-query-key {
-      color: #ff477e;
-    }
-    .cm-query-value {
-      color: #5465ff;
-    }
-    /* Operator styling: */
-    .cm-operator {
-      color: #ff477e;
-    }
-    .cm-punctuation {
-      color: #212121;
-    }
-
-    /* Highlight inserted text in CodeMirror editor */
-    .diff-highlight {
-      background-color: greenyellow;
-    }
-
-    /* Highlight deleted characters in Output while preserving colorization */
-    .deleted {
-      background-color: coral;
-    }
-  </style>
-</head>
-<body>
-  <h1>URL Editor</h1>
-
-  <div class="column">
-    <h2 id="sectionTitle">Clicks</h2>
-
-    <!-- Original Input -->
-    <label for="clicksInput">Input</label>
-    <textarea
-      id="clicksInput"
-      spellcheck="false"
-      placeholder="Paste URL here..."
-    ></textarea>
-
-    <!-- Output always shows the original with color + any deletions in red -->
-    <label for="clicksOutput">Output</label>
-    <div id="clicksOutput" class="output"></div>
-    <div id="clicksMessage" class="matchMessage"></div>
-  </div>
-
-  <div class="column">
-    <!-- Editable Text Area using CodeMirror -->
-    <label for="clicksEditor">Edit URL</label>
-    <textarea
-      id="clicksEditor"
-      spellcheck="false"
-      placeholder="Adjust the URL here..."
-    ></textarea>
-  </div>
-
-  <!-- CodeMirror JS from CDN -->
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.min.js"
-  ></script>
-
-  <!-- Our custom CodeMirror mode ("urlmode") -->
-  <script>
-    CodeMirror.defineMode("urlmode", function (config, parserConfig) {
-      return {
-        startState: function () {
-          return {
-            inQuery: false,
-            paramPhase: null,
-            isAppsflyer: false,
-          };
-        },
-        token: function (stream, state) {
-          if (!state.isAppsflyer) {
-            if (stream.string.indexOf("appsflyer") !== -1) {
-              state.isAppsflyer = true;
-            }
-          }
-          if (!state.inQuery) {
-            if (stream.peek() === "?") {
-              stream.next();
-              state.inQuery = true;
-              state.paramPhase = "key";
-              return "punctuation";
-            }
-            if (state.isAppsflyer && stream.match(/id\d+/, true)) {
-              return "appsflyer-id";
-            }
-            stream.next();
-            return null;
-          } else {
-            if (stream.peek() === "&") {
-              stream.next();
-              state.paramPhase = "key";
-              return "punctuation";
-            }
-            if (state.paramPhase === "key") {
-              if (stream.match(/[^=&]+/, true)) {
-                if (stream.peek() === "=") {
-                  state.paramPhase = "operator";
-                }
-                return "query-key";
-              }
-            }
-            if (state.paramPhase === "operator") {
-              if (stream.match("=", true)) {
-                state.paramPhase = "value";
-                return "operator";
-              }
-            }
-            if (state.paramPhase === "value") {
-              if (stream.match(/[^&]+/, true)) {
-                return "query-value";
-              }
-            }
-            stream.next();
-            return null;
-          }
-        },
-      };
-    });
-  </script>
-
-  <script>
-    // =============== Utility Functions ===============
-
-    // Escape special HTML chars
-    function escapeHtml(str) {
-      return str
-        .replace(/&/g, "&amp;")
-        .replace(/</g, "&lt;")
-        .replace(/>/g, "&gt;");
-    }
-
-    // Produce a boolean "deletedMask" array for each character in the original text,
-    // indicating whether that character was removed in the new text.
-    function createDeletedMask(original, edited) {
-      const mask = new Array(original.length).fill(false);
-      const dmp = new diff_match_patch();
-      const diffs = dmp.diff_main(original, edited);
-      dmp.diff_cleanupSemantic(diffs);
-
-      let originalPos = 0;
-      diffs.forEach(([op, text]) => {
-        if (op === 0) {
-          // unchanged => move forward in originalPos
-          originalPos += text.length;
-        } else if (op === -1) {
-          // This chunk was deleted => mark those positions in 'mask'
-          for (let i = 0; i < text.length; i++) {
-            mask[originalPos + i] = true;
-          }
-          originalPos += text.length;
-        } else if (op === 1) {
-          // inserted => does not consume original text
-        }
-      });
-      return mask;
-    }
-
-    // "Fully colorize" the entire original URL, but wrap any
-    // character that is deleted in a <span class="deleted">.
-    function colorizeWithDeletions(original, deletedMask) {
-      // We'll do a single pass that splits the URL
-      // into "baseUrl" (before '?') and "query" (after '?'),
-      // then color tokens as before, but wrapping deleted chars in .deleted span.
-
-      const questionIndex = original.indexOf("?");
-      if (questionIndex === -1) {
-        // no query => colorize entire URL
-        return colorizeSegmentWithDeletions(original, 0, deletedMask);
-      }
-
-      // split
-      const baseUrl = original.slice(0, questionIndex + 1);
-      const query   = original.slice(questionIndex + 1);
-
-      // colorize the baseUrl (with potential "id123" highlight)
-      let baseColored = colorizeSegmentWithDeletions(baseUrl, 0, deletedMask);
-
-      // If "appsflyer" is found, highlight "id\d+" in green. We'll do it by
-      // scanning the final HTML (like your existing approach):
-      baseColored = baseColored.replace(
-        /(id\d+)/,
-        `<span style="color: #4CAF50;">$1</span>`
-      );
-
-      // parse the query by splitting on '&'
-      const queryChunks = query.split("&");
-      let queryHTML = "";
-      let offset = baseUrl.length; // position in the original string
-
-      for (let i = 0; i < queryChunks.length; i++) {
-        const chunk = queryChunks[i];
-        const chunkHTML = colorizeQueryParamWithDeletions(
-          chunk,
-          offset,
-          deletedMask
-        );
-
-        // add & if not the first param
-        if (i > 0) {
-          queryHTML += `<span style="color: black;">&amp;</span>`;
-        }
-        queryHTML += chunkHTML;
-        offset += chunk.length + (i < queryChunks.length - 1 ? 1 : 0); // +1 for '&'
-      }
-
-      return baseColored + queryHTML;
-    }
-
-    // This colorizes a substring (like the base URL or a param chunk) while
-    // also wrapping any deleted characters in <span class="deleted">.
-    // We do it character by character to preserve color for each character
-    // and handle partial deletions.
-    function colorizeSegmentWithDeletions(segment, baseOffset, deletedMask) {
-      let result = "";
-      for (let i = 0; i < segment.length; i++) {
-        const charIndex = baseOffset + i;
-        const c = segment[i];
-        const escaped = escapeHtml(c);
-
-        // If this char is marked as deleted, wrap in .deleted
-        if (deletedMask[charIndex]) {
-          result += `<span class="deleted">${escaped}</span>`;
-        } else {
-          result += escaped;
-        }
-      }
-      return result;
-    }
-
-    // Colorize a single param chunk "key=val" with deletions
-    function colorizeQueryParamWithDeletions(param, baseOffset, deletedMask) {
-      // if the param includes '='
-      const eqIndex = param.indexOf("=");
-      if (eqIndex === -1) {
-        // malformed param => color it red, but still wrap deletions
-        let redPart = colorizeSegmentWithDeletions(param, baseOffset, deletedMask);
-        return `<span style="color: red;">${redPart}</span>`;
-      } else {
-        // we have key=val
-        const key = param.slice(0, eqIndex);
-        const val = param.slice(eqIndex + 1);
-        const keyHTML = colorizeSegmentWithDeletions(key, baseOffset, deletedMask);
-        const eqHTML  = deletedMask[baseOffset + eqIndex]
-          ? `<span class="deleted">=</span>`
-          : "=";
-        const valHTML = colorizeSegmentWithDeletions(
-          val,
-          baseOffset + eqIndex + 1,
-          deletedMask
-        );
-
-        return `<span style="color: #ff477e;">${keyHTML}${eqHTML}</span>` +
-               `<span style="color: #5465ff;">${valHTML}</span>`;
-      }
-    }
-
-    // Check if "plain text" of output matches the original
-    function checkUrlMatch(original, outputDiv, messageElement) {
-      const plain = outputDiv.textContent;
-      if (original === plain) {
-        messageElement.textContent = "URLs match";
-        messageElement.style.color = "green";
-      } else {
-        messageElement.textContent = "URLs mismatch";
-        messageElement.style.color = "red";
-      }
-    }
-
-    // =============== End Utilities ===============
-
-    // DOM elements
-    const clicksInput = document.getElementById("clicksInput");
-    const clicksOutput = document.getElementById("clicksOutput");
-    const clicksMessage = document.getElementById("clicksMessage");
-    const sectionTitle = document.getElementById("sectionTitle");
-
-    let originalInputValue = "";
-
-    // CodeMirror Editor
-    const editor = CodeMirror.fromTextArea(
-      document.getElementById("clicksEditor"),
-      {
-        lineNumbers: false,
-        mode: "urlmode",
-        lineWrapping: true,
-      }
-    );
-
-    // User types/pastes in the Input area
-    clicksInput.addEventListener("input", function () {
-      originalInputValue = this.value.trim();
-      // Show the fully colorized original in the Output
-      // with no deletions (yet).
-      const noDeletions = new Array(originalInputValue.length).fill(false);
-      clicksOutput.innerHTML = colorizeWithDeletions(originalInputValue, noDeletions);
-      checkUrlMatch(originalInputValue, clicksOutput, clicksMessage);
-
-      // Also sync CodeMirror
-      editor.setValue(originalInputValue);
-
-      // Update Title
-      updateSectionTitle(originalInputValue);
-    });
-
-    // For inserted text in the editor => highlight in yellow
-    // For deleted text => highlight those chars in red in the Output
-    editor.on("change", function (cm, change) {
-      // Clear previous insertion markers
-      if (window.diffMarkers) {
-        window.diffMarkers.forEach((m) => m.clear());
-      }
-      window.diffMarkers = [];
-
-      const newValue = cm.getValue();
-
-      // 1) Highlight inserted text (op=1) in editor
-      const dmp = new diff_match_patch();
-      const diffs = dmp.diff_main(originalInputValue, newValue);
-      dmp.diff_cleanupSemantic(diffs);
-
-      let pos = 0;
-      diffs.forEach(([op, text]) => {
-        if (op === 0) {
-          pos += text.length;
-        } else if (op === 1) {
-          // insertion => highlight in yellow
-          const startPos = cm.posFromIndex(pos);
-          const endPos = cm.posFromIndex(pos + text.length);
-          window.diffMarkers.push(
-            cm.markText(startPos, endPos, { className: "diff-highlight" })
-          );
-          pos += text.length;
-        }
-        // if (op === -1), do nothing in the editor
-      });
-
-      // 2) Create a "deletedMask" for the original text
-      const deletedMask = createDeletedMask(originalInputValue, newValue);
-
-      // 3) Rebuild Output with the original text, but wrap
-      //    any "deleted" chars in red
-      clicksOutput.innerHTML = colorizeWithDeletions(originalInputValue, deletedMask);
-
-      // 4) Check if they match
-      checkUrlMatch(originalInputValue, clicksOutput, clicksMessage);
-    });
-
-    function updateSectionTitle(raw) {
-      if (raw.includes("appsflyer")) {
-        if (raw.includes("impression")) {
-          sectionTitle.textContent = "Impressions";
-        } else {
-          sectionTitle.textContent = "Clicks";
-        }
-      } else if (raw.includes("imp")) {
-        sectionTitle.textContent = "Impressions";
-      } else {
-        sectionTitle.textContent = "Clicks";
-      }
-    }
-  </script>
-</body>
+    <!-- CodeMirror JS from CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.min.js"
+    ></script>
+    <!-- Our custom JavaScript -->
+    <script src="script.js"></script>
+  </body>
 </html>
