updated site title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'G-VDRYPTT6HE');
     </script>
-    <title>URL Editor with Matching Wrap</title>
+    <title>URL Editor</title>
     <!-- CodeMirror CSS from CDN -->
     <link
       rel="stylesheet"
