--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Input Section (full width) -->
     <div class="column">
       <div class="copy-container">
-        <h4>Input</h4>
+        <h4>Raw URL</h4>
         <button id="copyButtonInput">
           <span class="material-symbols-outlined">content_copy</span>
         </button>
@@ -52,16 +52,16 @@
       <!-- Output Column -->
       <div class="column">
         <div class="copy-container">
-          <h4>Output</h4>
+          <h4>Styled URL</h4>
           <div id="clicksMessage" class="matchMessage"></div>
         </div>
         <div id="clicksOutput" class="output"></div>
       </div>
 
       <!-- Edit URL Column -->
-      <div class="column">
+      <div class="column editable-url-column">
         <div class="copy-container">
-          <h4>Edit URL</h4>
+          <h4>Editable URL</h4>
           <button id="copyButtonEditor">
             <span class="material-symbols-outlined">content_copy</span>
           </button>
