--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Material Symbols icon for copy -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_copy"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_copy,refresh"
     />
     <!-- Our custom CSS -->
     <link rel="stylesheet" href="styles.css" />
@@ -35,9 +35,14 @@
     <div class="column">
       <div class="copy-container">
         <h4>Raw URL</h4>
-        <button id="copyButtonInput">
-          <span class="material-symbols-outlined">content_copy</span>
-        </button>
+        <div>
+          <button id="refreshButtonInput">
+            <span class="material-symbols-outlined">refresh</span>
+          </button>
+          <button id="copyButtonInput">
+            <span class="material-symbols-outlined">content_copy</span>
+          </button>
+        </div>
         <span id="copyPopupInput" class="copy-popup">Copied</span>
       </div>
       <textarea
