Fixed Notes window height, body width, changed + icon size and color

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           spellcheck="false"
           placeholder="Adjust the URL here..."
         ></textarea>
+        <button id="addLineButton" class="line-add-btn">+</button>
       </div>
     </div>
 
